# YOLO

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup_dev.sh
annotations/: 11届猪业.json  2018-长沙国际.json  2024-畜博会-01.json
configs/: default.yaml
datasets/booth_example_images/: 2024年展位图_0357_3584_7168_640.json  2024年展位图_0358_4096_7168_640.json  2024年展位图_0362_6144_7168_640.json  2024年展位图_0363_6656_7168_640.json  2025年畜牧-展位分布图-1105-01_0006_0_640_800.json  2025年畜牧-展位分布图-1105-01_0033_1920_3200_800.json  ScreenShot_2026-01-22_114102_285.json  ScreenShot_2026-01-22_114217_428.json  ScreenShot_2026-01-22_114248_700.json  ScreenShot_2026-01-22_114304_589.json  ScreenShot_2026-01-22_114326_603.json  ScreenShot_2026-01-22_123746_003.json  ScreenShot_2026-01-22_123841_928.json  ScreenShot_2026-01-22_131723_460.json  ScreenShot_2026-01-22_150440_308.json  ScreenShot_2026-01-22_150510_771.json  ScreenShot_2026-01-22_151338_733.json  ScreenShot_2026-01-22_154213_568.json  ScreenShot_2026-01-23_115803_955.json  ScreenShot_2026-01-23_150151_401.json  ScreenShot_2026-01-23_150955_099.json  ScreenShot_2026-01-23_162749_236.json  ScreenShot_2026-01-25_112542_459.json  ScreenShot_2026-01-25_112644_930.json  ScreenShot_2026-01-25_125300_884.json  ScreenShot_2026-01-25_125647_047.json  ScreenShot_2026-01-25_125845_011.json  ScreenShot_2026-01-25_130145_610.json  ScreenShot_2026-01-25_130503_320.json  ScreenShot_2026-01-25_130650_612.json  ScreenShot_2026-01-25_130827_046.json  ScreenShot_2026-01-25_131033_510.json  ScreenShot_2026-01-25_131202_571.json  ScreenShot_2026-01-25_131245_380.json  ScreenShot_2026-01-25_131440_613.json  ScreenShot_2026-01-25_131558_173.json  ScreenShot_2026-01-26_135517_393.json  ScreenShot_2026-01-26_135606_523.json  ScreenShot_2026-01-26_140413_258.json  ScreenShot_2026-01-26_140503_244.json  (+17 more)
datasets/booth_seg/labels/: train.cache  val.cache
datasets/booth_seg/labels/train/: 2024年展位图_0357_3584_7168_640.txt  2024年展位图_0358_4096_7168_640.txt  2024年展位图_0362_6144_7168_640.txt  2025年畜牧-展位分布图-1105-01_0006_0_640_800.txt  2025年畜牧-展位分布图-1105-01_0033_1920_3200_800.txt  ScreenShot_2026-01-22_102512_684.txt  ScreenShot_2026-01-22_114102_285.txt  ScreenShot_2026-01-22_114144_902.txt  ScreenShot_2026-01-22_114217_428.txt  ScreenShot_2026-01-22_114248_700.txt  ScreenShot_2026-01-22_114304_589.txt  ScreenShot_2026-01-22_114326_603.txt  ScreenShot_2026-01-22_123746_003.txt  ScreenShot_2026-01-22_123811_190.txt  ScreenShot_2026-01-22_123841_928.txt  ScreenShot_2026-01-22_131640_106.txt  ScreenShot_2026-01-22_131723_460.txt  ScreenShot_2026-01-22_150440_308.txt  ScreenShot_2026-01-22_150510_771.txt  ScreenShot_2026-01-22_151338_733.txt  ScreenShot_2026-01-22_151749_418.txt  ScreenShot_2026-01-22_151859_398.txt  ScreenShot_2026-01-22_154053_198.txt  ScreenShot_2026-01-22_154123_169.txt  ScreenShot_2026-01-22_154213_568.txt  ScreenShot_2026-01-22_154312_230.txt  ScreenShot_2026-01-22_154445_275.txt  ScreenShot_2026-01-23_115803_955.txt  ScreenShot_2026-01-23_150151_401.txt  ScreenShot_2026-01-23_150955_099.txt  ScreenShot_2026-01-23_151048_696.txt  ScreenShot_2026-01-23_151523_674.txt  ScreenShot_2026-01-23_151612_195.txt  ScreenShot_2026-01-23_161548_227.txt  ScreenShot_2026-01-23_161617_514.txt  ScreenShot_2026-01-23_162749_236.txt  ScreenShot_2026-01-25_112255_967.txt  ScreenShot_2026-01-25_112542_459.txt  ScreenShot_2026-01-25_112644_930.txt  ScreenShot_2026-01-25_125002_317.txt  (+29 more)
datasets/booth_seg/labels/val/: 2024年展位图_0363_6656_7168_640.txt  2025年畜牧-展位分布图-1105-01_0006_0_640_800.txt  2025年畜牧-展位分布图-1105-01_0033_1920_3200_800.txt  ScreenShot_2026-01-22_102512_684.txt  ScreenShot_2026-01-22_114102_285.txt  ScreenShot_2026-01-22_114144_902.txt  ScreenShot_2026-01-22_114248_700.txt  ScreenShot_2026-01-22_114304_589.txt  ScreenShot_2026-01-22_114326_603.txt  ScreenShot_2026-01-22_123746_003.txt  ScreenShot_2026-01-22_123811_190.txt  ScreenShot_2026-01-22_131723_460.txt  ScreenShot_2026-01-22_150440_308.txt  ScreenShot_2026-01-22_150510_771.txt  ScreenShot_2026-01-22_151749_418.txt  ScreenShot_2026-01-22_154123_169.txt  ScreenShot_2026-01-22_154445_275.txt  (+12 more)
datasets/manual_booth_annotations/: ScreenShot_2026-01-22_102512_684.json  ScreenShot_2026-01-22_114144_902.json  ScreenShot_2026-01-22_123811_190.json  ScreenShot_2026-01-22_123841_928.json  ScreenShot_2026-01-22_131640_106.json  ScreenShot_2026-01-22_151749_418.json  ScreenShot_2026-01-22_151859_398.json  ScreenShot_2026-01-22_154053_198.json  ScreenShot_2026-01-22_154123_169.json  ScreenShot_2026-01-22_154312_230.json  ScreenShot_2026-01-22_154445_275.json  ScreenShot_2026-01-23_150955_099.json  ScreenShot_2026-01-23_151048_696.json  ScreenShot_2026-01-23_151523_674.json  ScreenShot_2026-01-23_151612_195.json  ScreenShot_2026-01-23_161548_227.json  ScreenShot_2026-01-23_161617_514.json  ScreenShot_2026-01-23_162911_251.json  ScreenShot_2026-01-25_112255_967.json  ScreenShot_2026-01-25_125002_317.json  ScreenShot_2026-01-25_125141_526.json  ScreenShot_2026-01-25_125354_182.json  ScreenShot_2026-01-25_125459_795.json  ScreenShot_2026-01-25_130328_095.json  ScreenShot_2026-01-25_131558_173.json
docs/: DEVELOPMENT.md  PYTHON_IMPORT_SOLUTION.md  REFACTORING_SUMMARY.md
labelme_annotations/: 红木.json
script/: Yolo_test.py  all.py  booth_seg.yaml  data_test.yaml  dataset_tiler.py  log_config.py  predict.py  predict_V2.py  predict_obb.py  predict_obb_sahi.py  predict_sahi.py  predict_seg.py  predict_seg_V2.py  predict_seg_sahi.py  slice_image.py  train.py  train_obb.py  train_predict_pipeline.py  train_seg.py  unified_logging.py
script/label/: convert_polygon_to_rotation.py  label_format_utils.py  labelme_to_yolo.py  labelme_to_yolo_dataset.py  show_label.py  split_file.py
script/utils/: pdf_img_extractor.py
src/: __init__.py
src/core/: __init__.py  config.py  constants.py  exceptions.py
src/utils/: __init__.py  device_utils.py  file_utils.py  image_tile_utils.py  logging_utils.py  path_utils.py
tests/: __init__.py  test_config.py  test_logging_utils.py  test_path_utils.py
