[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "yolo-booth-detection"
version = "0.1.0"
description = "YOLO-based booth detection project supporting OBB detection and instance segmentation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ultralytics==8.4.13",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "numpy<2.0.0",
    "sahi==0.11.36",
    "opencv-python==4.10.0.84",
    "Pillow==11.3.0",
    "shapely>=2.0.0",
    "pypinyin>=0.49.0",
    "PyMuPDF>=1.23.0",
    "pdf2image>=1.16.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"
